--- a/frontend/backoffice/src/app/globals.css
+++ b/frontend/backoffice/src/app/globals.css
@@ -36,7 +36,6 @@
 }
 
 body {
-    background-color: var(--color-background);
     color: var(--color-text);
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -47,8 +46,8 @@ body {
     left: -30px;
     width: 20px;
     height: 70%;
-    border-left: 2px solid var(--color-border);
-    border-bottom: 2px solid var(--color-border);
+    border-left: 2px solid #e5e7eb;
+    border-bottom: 2px solid #e5e7eb;
 }
 
 .bg-primary {
